# mcpserver

./: .env.example  .gitignore  COMPLETE_DOCUMENTATION.md  Dockerfile  README.md  RELEASE_NOTES.md  backup_mcp_server.sh  pyproject.toml
config/: server.docker.yaml  server.local.yaml  server.yaml
dev_backend/: main.py
docs/: ARCHITECTURE.md  CODE_REVIEW_ENTERPRISE.md  COMPLETE_GUIDE.md  ERROR_HANDLING.md  OBSERVABILITY.md  README.md
docs/engineering/: BASELINE.md  CHANGELOG_HARDENING.md
docs/ops/: DEV_TESTING.md
docs/reports/: BACKEND_MCP_DOCUMENTATION_REPORT.md  MCP_SERVER_REFACTOR_REPORT.md
mcp_server/: __init__.py  approval.py  config.py  cost_policy.py  crm_tools_ext.py  env_utils.py  http_app.py  main.py  metrics_cli.py  minimal_server.py  observability.py  rate_limits.py  real_estate_tools.py  security.py  server.py  tool_aliases.py  trace_context.py  website_fetch_tools.py
mcp_server/tools/: __init__.py
scripts/: call_memory_search.py  call_tool.py  discovery.py  health_check.py  list_tools.py  validate_security_tools.py
src/tools/: realEstate.ts
tests/: test_approval_token_required_for_write_tools.py  test_circuit_breaker.py  test_cost_policy.py  test_memory_search.py  test_permissions_and_rate_limiter.py  test_validate_security_tools.py  test_website_fetch_ssrf.py
tools/: dump_repo_zip.sh
